start button implementato e messo nei livelli

--- a/Bounce Test/Bounce Test.csproj
+++ b/Bounce Test/Bounce Test.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Assets\Scripts\Pause.cs" />
     <Compile Include="Assets\Scripts\Rotate.cs" />
     <Compile Include="Assets\Scripts\RotateOneWay.cs" />
+    <Compile Include="Assets\Scripts\StartButton.cs" />
     <Compile Include="Assets\Scripts\ToLevelTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
